fix top menu unreadable in mobile for tendenci2020 theme
css is copied from the commit 9247a49e

--- a/tendenci/themes/t7-tendenci2020/media/css/base.css
+++ b/tendenci/themes/t7-tendenci2020/media/css/base.css
@@ -220,6 +220,51 @@ h4.t-admin-mega-h4 {
 #t-admin-megamenu .navbar-toggle .icon-bar {
   background-color: white;
 }
+/* Extra small devices (< 768px) */
+@media (max-width: 767px) {
+
+#t-admin-megamenu-profile-dd {
+   min-width: 100%;
+   padding: 0 15px;
+}
+#t-admin-megamenu-apps-dd {
+    min-width: 100%;
+}
+#t-admin-megamenu-reports-dd {
+    min-width: 100%;
+}
+#t-admin-megamenu-apps-dd {
+  min-width: 100%;
+}
+#t-admin-megamenu-community-dd {
+    min-width: 100%;
+    padding: 0 15px;
+}
+#t-admin-megamenu #t-admin-megamenu-support-dd {
+    padding: 0 15px;
+}
+#t-admin-megamenu #t-admin-megamenu-pages-dd {
+  padding: 0 15px;
+}
+#t-admin-megamenu li.content-item {
+    padding: 12px 0;
+}
+
+#t-admin-megamenu .dropdown-menu .nav-label{
+    color: #4F4F4F;
+}
+#t-admin-megamenu .dropdown-menu {
+  margin-top: 0;
+  background-color: #ffffff;
+}
+#t-admin-megamenu #navbar-collapse {
+    background-color: #333333;
+}
+#t-admin-megamenu .yamm .yamm-content {
+    padding: 0;
+}
+
+}
 
 
 /* JUMBOTRON 
